--- a/public/index.html
+++ b/public/index.html
@@ -2,7 +2,10 @@
 <html lang="zh-CN">
   <head>
     <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <meta
+      name="viewport"
+      content="width=device-width, initial-scale=1.0, viewport-fit=cover"
+    />
     <title>答案 - 于朦胧问答挑战</title>
     <meta property="og:title" content="答案 - 于朦胧问答挑战" />
     <meta
@@ -56,7 +59,10 @@
         background-size: 400% 400%;
         animation: gradientBG 15s ease infinite;
         color: var(--text-main);
-        height: 100vh;
+        min-height: 100vh;
+        min-height: 100svh;
+        min-height: 100dvh;
+        height: 100%;
         overflow: hidden;
         display: flex;
         justify-content: center;
@@ -78,11 +84,14 @@
         width: 100%;
         max-width: 480px;
         height: 100%;
+        min-height: 100%;
         position: relative;
         display: flex;
         flex-direction: column;
         overflow: hidden;
         box-shadow: 0 0 50px rgba(0, 0, 0, 0.6);
+        padding-bottom: env(safe-area-inset-bottom);
+        box-sizing: border-box;
       }
 
       /* --- 漂浮背景 --- */
