--- a/public/index.html
+++ b/public/index.html
@@ -1,5 +1,5 @@
 <!doctype html>
-<html lang="zh-CN">
+<html lang="zh-CN" class="app-loading">
   <head>
     <meta charset="UTF-8" />
     <meta
@@ -51,6 +51,16 @@
         display: none;
       }
 
+      .app-loading #app {
+        opacity: 0;
+        pointer-events: none;
+      }
+
+      html,
+      body {
+        height: 100%;
+      }
+
       body {
         margin: 0;
         padding: 0;
@@ -61,8 +71,7 @@
         color: var(--text-main);
         min-height: 100vh;
         min-height: 100svh;
-        min-height: 100dvh;
-        height: 100%;
+        height: 100dvh;
         overflow: hidden;
         display: flex;
         justify-content: center;
@@ -83,8 +92,8 @@
       #app {
         width: 100%;
         max-width: 480px;
-        height: 100%;
         min-height: 100%;
+        height: 100dvh;
         position: relative;
         display: flex;
         flex-direction: column;
@@ -829,7 +838,7 @@
     </div>
     <script src="questions.js"></script>
     <script>
-      const { createApp, ref, computed, onUnmounted } = Vue;
+      const { createApp, ref, computed, onMounted, onUnmounted } = Vue;
       const allQuestions = Array.isArray(window.questions)
         ? window.questions
         : [];
@@ -1159,6 +1168,10 @@
 
           onUnmounted(() => {
             if (timerInterval) clearInterval(timerInterval);
+          });
+
+          onMounted(() => {
+            document.documentElement.classList.remove("app-loading");
           });
 
           loadSavedName();
